noinst_HEADERS = compat.h           \
	         queue.h            \
                 hashtable.h        \
	         hashtable_util.h   \
	         hashtable_private.h

noinst_LTLIBRARIES = libcompat.la
libcompat_la_SOURCES = compat.c               \
	       	       hashtable.c            \
		       hashtable_hashfn.c     \
		       hashtable_util.c
