noinst_LIBRARIES = libxsp.a

libxsp_a_SOURCES = libxsp.c libxsp_hop.c libxsp_hop.h libxsp_path.c libxsp_path.h libxsp_session.c libxsp_session.h libxsp_protocol_settings.c libxsp_protocol_settings.h libxsp_proto_binary.c  libxsp_proto.c libxsp.h  libxsp_proto_binary.h  libxsp_proto.h ../include/xsp-proto.h ../include/xsp.h ../compat/compat.c ../compat/compat.h

AM_CFLAGS = -fPIC


INCLUDES = -I../../../src/sbin/libxsp -I../../../src/sbin/include -I../../../src/sbin/compat -I../../../src/sbin/libconfig
