noinst_LIBRARIES = libxsp.a

libxsp_a_SOURCES = libxsp.c libxsp_hop.c libxsp_hop.h libxsp_path.c libxsp_path.h libxsp_session.c libxsp_session.h libxsp_protocol_settings.c libxsp_protocol_settings.h libxsp_proto_binary_v0.c libxsp_proto_binary_v0.h libxsp_proto_binary_v1.c libxsp_proto_binary_v1.h libxsp_proto.c libxsp_proto.h ../include/xsp-proto.h ../include/xsp.h ../compat/compat.c ../compat/compat.h

AM_CFLAGS = -fPIC
INCLUDES = -I@top_srcdir@/libxsp -I@top_srcdir@/include -I@top_srcdir@/compat -I@top_srcdir@/libconfig
